# dash_inema_asv

./: .env-dist  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yaml  docker-run.sh  pyproject.toml
dash_inema_asv/: __init__.py  app.py  index.py  settings.py  utils.py
dash_inema_asv/assets/: styles.css
dash_inema_asv/components/: controller.py  controller_datapicker.py  controller_filter.py  footer.py  graph.py  header.py  indicador_geral.py  map.py  map_.py  table.py  table_.py
dash_inema_asv/database/configs/: connection.py
dash_inema_asv/database/repository/: seia_repository.py
dash_inema_asv/database/sql/: seia.py
dash_inema_asv/dataset/: data.py
