[tool.poetry]
name = "dash-inema"
version = "0.1.0"
description = ""
authors = ["Diogo Caribé <dogosousa@gmail.com>"]
readme = "README.md"
packages = [{include = "dash_inema"}]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"
dash-leaflet = "^1.0.15"
geopandas = "^1.0.1"
sqlalchemy = "^2.0.32"
psycopg = "^3.2.1"
dash-mantine-components = "0.12"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
